# soundcloud-scraper

./: .env  .gitignore  Dockerfile  pyproject.toml  requirements.txt  scrawler.py  scs.py
.github/workflows/: build-publish.yaml
src/: main.py
